devops-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astro-payload-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: astro-service
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: payload-service
                port:
                  number: 80
